# SEP4IoTDevice_clone

./: .coveralls.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LoRaWANHandler.c  README.md  Sep4IoTDevice.atsln  Sep4IoTDevice.componentinfo.xml  Sep4IoTDevice.cproj  main.c
.github/workflows/: test-coverage.yml  test.yml
Headers/: co2.h  sensorHandler.h
Impl/: co2.c  servo.c
test/: CMakeLists.txt
test/src/: CMakeLists.txt  co2_test.cpp  dataHandler_test.cpp  lora_test.cpp  sensorHandler_test.cpp  servo_test.cpp  temperature_test.cpp
test/src/FreeRTOS_defs/: FreeRTOS.h  FreeRTOS_FFF_MocksDeclaration.h  FreeRTOS_FFF_MocksDefinitions.cpp  task.h
